# aichallenge-racingkart-iASL-2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  LOG_DESIGN.md  Makefile  README.md  compose.md  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint.sh  docker_build.sh  docker_run.sh  packages.txt  run_evaluation.bash  run_parallel_submissions.bash  setup.bash
aichallenge/: Makefile  README.md  Readme.md  build_autoware.bash  publish.bash  run_autoware.bash  run_evaluation.bash  run_simulator.bash
aichallenge/ml_workspace/: .gitignore  README.md  record_data.bash
aichallenge/utils/: convert_result.bash  eval_flow.bash  fix_ownership.bash  move_window.bash  publish.bash  record_rosbag.bash  run_rviz.bash  run_sim_eval.bash  simulator_reset.bash  topic_check.sh
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/: CMakeLists.txt  README.md  package.xml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/config/: config.yaml  ref_vel.yaml  sim_config.yaml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/: create_obstacles.bash  create_waypoints.bash  create_waypoints.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/final/: occupancy_grid_map.pgm  occupancy_grid_map.yaml  traj_mincurv.csv
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/final_ver2/: occupancy_grid_map.pgm  traj_mincurv.csv
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/final_ver3/: occupancy_grid_map.pgm  traj_mincurv.csv
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/final_ver4/: occupancy_grid_map.pgm  occupancy_grid_map.yaml  traj_mincurv.csv
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/official/: occupancy_grid_map.pgm  occupancy_grid_map.yaml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/others/: obstacles_rosbag2_2024_09_16-12_17_03_0.csv  occupancy_grid_map_obstacles.csv  occupancy_grid_map_waypoints.csv
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/preliminary/: optimized_traj_mincurv.csv  optimized_traj_mintime.csv  optimized_traj_shortest.csv
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/include/multi_purpose_mpc_ros/: boost_commander.hpp
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/launch/: mpc_controller.launch.py  mpc_simulation.launch.py  path_constraints_provider.launch.py  reference_path_visualizer.launch.py  reference_velocity_configulator.launch.py  test.launch.xml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/multi_purpose_mpc_ros/: common.py  exexution_stats.py  mpc_controller.py  mpc_simulation.py  obstacle_manager.py  path_constraints_provider.py  simulation_logger.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/multi_purpose_mpc_ros/core/: MPC.py  map.py  reference_path.py  spatial_bicycle_models.py  utils.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/multi_purpose_mpc_ros/tools/: reference_path_generator.py  reference_path_visualizer.py  reference_velocity_configulator.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/resources/: requirements.txt
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/scripts/: mpc_controller  mpc_simulation  obstacle_parser.py  path_constraints_provider  path_constraints_provider.bash  publish_initialpose_gnss  reference_path_visualizer  reference_velocity_configulator  run_mpc_controller.bash  run_mpc_simulation.bash  run_reference_path_visualizer.bash  run_reference_velocity_configulator.bash
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/src/: boost_commander.cpp  boost_commander_node.cpp
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_msgs/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_msgs/msg/: AckermannControlBoostCommand.msg  BorderCells.msg  PathConstraints.msg
aichallenge/workspace/src/aichallenge_submit/pilot_net_controller/: CMakeLists.txt  README.md  package.xml
aichallenge/workspace/src/aichallenge_submit/pilot_net_controller/config/: pilot_net_node.param.yaml
aichallenge/workspace/src/aichallenge_submit/pilot_net_controller/launch/: pilot_net.launch.xml
aichallenge/workspace/src/aichallenge_submit/pilot_net_controller/pilot_net_controller/: pilot_net_controller_core.py  pilot_net_controller_node.py
aichallenge/workspace/src/aichallenge_submit/pilot_net_controller/pilot_net_controller/model/: __init__.py  pilotnet.py
aichallenge/workspace/src/aichallenge_submit/pilot_net_controller/pilot_net_controller/model/numpy/: layers.py
aichallenge/workspace/src/aichallenge_system/aichallenge_control_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_control_rviz_plugin/include/aichallenge_control_rviz_plugin/: control_mode_panel.hpp
aichallenge/workspace/src/aichallenge_system/aichallenge_control_rviz_plugin/src/: control_mode_panel.cpp
aichallenge/workspace/src/aichallenge_system/autostart_orchestrator_py/: CMakeLists.txt  README.md  autostart_orchestrator_node.md  awsim_state_manager.md  package.xml
aichallenge/workspace/src/aichallenge_system/autostart_orchestrator_py/autostart_orchestrator_py/: autostart_orchestrator_node.py  awsim_state_manager_node.py  test_autostart_orchestrator.py
aichallenge/workspace/src/aichallenge_system/autostart_orchestrator_py/config/: autostart_orchestrator.param.yaml  awsim_state_manager.param.yaml
design_docs/: HowToSetup.md  Introduction.md  Plan.md  Windows_WSL2_Setup.md  beginner_marp_deck.marp.md  docker_audio.md  how_to_setup.md  introduction.md  log_design.md  makefile_target_naming.md  mpc_integration.md  plan.md  run_parallel_submissions.md  windows_wsl2_setup.md
remote/: gui_tools.py  rviz.bash
remote/detail/: network_setting.bash
vehicle/: README.md  record_rosbag.bash
(+49 files in other folders)
