<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_purpose_mpc_ros_msgs</name>
  <version>0.0.0</version>
  <description>The multi_purpose_mpc_ros_msgs package</description>
  <maintainer email="t.sato17123@gmail.com">Takashi Sato</maintainer>
  <maintainer email="kenta.kato.4321@gmail.com">Kenta Kato</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>autoware_auto_control_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
