<?xml version="1.0"?>
<package format="3">
  <name>pilot_net_controller</name>
  <version>0.0.0</version>
  <description>A package for PilotNet camera-based controller</description>
  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
