<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aichallenge_control_rviz_plugin</name>
  <version>0.1.0</version>
  <description>RViz2 panel to publish control mode requests for AWSIM.</description>

  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>rviz_common</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>qtbase5-dev-tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
