<?xml version="1.0"?>
<package format="3">
  <name>autostart_orchestrator_py</name>
  <version>0.1.0</version>
  <description>Autostart orchestrator for AIchallenge: watches /&lt;vehicle_ns&gt;/awsim/state and triggers initial pose/control, optional capture, and optional rosbag.</description>
  <maintainer email="tanaka.arata.y5@s.gifu-u.ac.jp">Arata Tanaka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
